--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
   <h3>Notes</h3>
   <a href="https://drive.google.com/file/d/1gHTmbg_GQHXAK-igfzg7a1DUqamg_piM/view?usp=drivesdk">Rishi sir notes</a>
   <h2 class="main-subject">Chemistry</h2>
+  <h3>Notes</h3>
 </body>
 </html>
