--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
   <link rel="relation" href="" title="Relation" type="" />
   <h2 class="main-subject">Physics</h2>
   <h3>Notes</h3>
-  <a href="https://drive.google.com/file/d/1gHTmbg_GQHXAK-igfzg7a1DUqamg_piM/view?usp=drivesdk">Rishi sir notes</a>
+  <a href="https://drive.google.com/file/d/1gHTmbg_GQHXAK-igfzg7a1DUqamg_piM/view?usp=drivesdk">दोलन और तरंगे By Rishi sir</a>
   <h2 class="main-subject">Chemistry</h2>
   <h3>Notes</h3>
   <br />
   <div class="notice">
     Notice Board 📣
   </div>
+  <br />
+  <li>अन्य विषयों के नोट्स जल्द ही उपलब्ध हो जाएंगे</li>
 </body>
 </html>
