--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link rel="relation" href="" title="Relation" type="" />
   <h2 class="main-subject">Physics</h2>
   <h3>Notes</h3>
-  <a href="https://drive.google.com/file/d/1gHTmbg_GQHXAK-igfzg7a1DUqamg_piM/view?usp=drivesdk">दोलन और तरंगे By Rishi sir</a>
+<a href="https://drive.google.com/file/d/1gHTmbg_GQHXAK-igfzg7a1DUqamg_piM/view?usp=drivesdk">दोलन और तरंगे By Rishi sir</a>
   <h2 class="main-subject">Chemistry</h2>
   <h3>Notes</h3>
   <br />
@@ -34,5 +34,8 @@
   </div>
   <br />
   <li>अन्य विषयों के नोट्स जल्द ही उपलब्ध हो जाएंगे</li>
+  <li> <a href="https://chat.whatsapp.com/C4MTvqPzpGQ4nUO1rKQoQw?mode=ac_t">Join group for more information</a></li>
+ 
+  
 </body>
 </html>
