update copyright message

--- a/index.html
+++ b/index.html
@@ -35,7 +35,19 @@
   <br />
   <li>अन्य विषयों के नोट्स जल्द ही उपलब्ध हो जाएंगे</li>
   <li> <a href="https://chat.whatsapp.com/C4MTvqPzpGQ4nUO1rKQoQw?mode=ac_t">Join group for more information</a></li>
+  <br />
  
-  
+  <!-- copyright message -->
+<footer class="footer">
+  <div class="footer-content">
+    <p><strong>Disclaimer:</strong> The information provided on this website is for general purposes only. While every effort has been made to ensure accuracy, no guarantee is given regarding completeness or reliability of the content. The owner will not be liable for any loss or damage arising from the use of this website. External links, if any, are provided for convenience and do not signify endorsement.</p>
+    
+    <p class="copyright">© 2025 Sachin Nitharwal. All Rights Reserved.<br>
+    No part of this website may be copied, reproduced, or distributed without prior written permission.</p>
+  </div>
+</footer>
+
+
+
 </body>
 </html>
