--- a/index.html
+++ b/index.html
@@ -24,17 +24,21 @@
   <h3>Notes</h3>
   <link rel="relation" href="" title="Relation" type="" />
   <h2 class="main-subject">Physics</h2>
-  <h3>Notes</h3>
-<a href="https://drive.google.com/file/d/1gHTmbg_GQHXAK-igfzg7a1DUqamg_piM/view?usp=drivesdk">दोलन और तरंगे By Rishi sir</a>
+  <h3 class="sub">Notes</h3>
+<li><a href="https://drive.google.com/file/d/1gHTmbg_GQHXAK-igfzg7a1DUqamg_piM/view?usp=drivesdk">दोलन और तरंगे By Rishi sir</a></li>
+<h3 class="subsubject">
+Practical file</h3>
   <h2 class="main-subject">Chemistry</h2>
-  <h3>Notes</h3>
+  <h3 class="subsubject">Notes</h3>
   <br />
   <div class="notice">
     Notice Board 📣
   </div>
   <br />
+  <li><a href="https://drive.google.com/file/d/1gVZMKG41o5_8bmA5_723WhHdZzhNEUok/view?usp=drivesdk">👉Holiday calendar 2025</a></li>
   <li>अन्य विषयों के नोट्स जल्द ही उपलब्ध हो जाएंगे</li>
   <li> <a href="https://chat.whatsapp.com/C4MTvqPzpGQ4nUO1rKQoQw?mode=ac_t">Join group for more information</a></li>
+  
   <br />
  
   <!-- copyright message -->
@@ -42,7 +46,7 @@
   <div class="footer-content">
     <p><strong>Disclaimer:</strong> The information provided on this website is for general purposes only. While every effort has been made to ensure accuracy, no guarantee is given regarding completeness or reliability of the content. The owner will not be liable for any loss or damage arising from the use of this website. External links, if any, are provided for convenience and do not signify endorsement.</p>
     
-    <p class="copyright">© 2025 Sachin Nitharwal. All Rights Reserved.<br>
+    <p class="copyright">© 2025 Sachin Nitharwal and all group members. All Rights Reserved.<br>
     No part of this website may be copied, reproduced, or distributed without prior written permission.</p>
   </div>
 </footer>
