--- a/index.html
+++ b/index.html
@@ -15,19 +15,24 @@
 </head>
 
 <body>
-  <h1 class="heading">BSC TOP</h1>
+<div>
+  
+  <h1 class="heading">BSC TOP </h1></div>
   <img  src="rr.png" width"104" alt="rr college"height"70" class="banner" />
   <p class="welcome">Welcome to here...</p>
   <script src="main.js"></script>
   <h4>Hello friend you will get all materials related to RR COLLEGE ALWAR</h4>
+  <hr />
   <h2 class="main-subject">Math</h2>
   <h3>Notes</h3>
   <link rel="relation" href="" title="Relation" type="" />
+  <hr />
   <h2 class="main-subject">Physics</h2>
   <h3 class="sub">Notes</h3>
 <li><a href="https://drive.google.com/file/d/1gHTmbg_GQHXAK-igfzg7a1DUqamg_piM/view?usp=drivesdk">दोलन और तरंगे By Rishi sir</a></li>
 <h3 class="subsubject">
 Practical file</h3>
+<hr />
   <h2 class="main-subject">Chemistry</h2>
   <h3 class="subsubject">Notes</h3>
   <br />
