--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 <div>
-  
+  <img src="logo.png" alt="logo" class="logo" />
   <h1 class="heading">BSC TOP </h1></div>
   <img  src="rr.png" width"104" alt="rr college"height"70" class="banner" />
   <p class="welcome">Welcome to here...</p>
