--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
 
   <h2 class="main-subject">Math</h2>
   <h3>Notes</h3>
+  <ol>
+    <li>
+      <a href="sample.pdf" target="_blank">sample</a>
+    </li>
+  </ol>
   <hr />
 
   <h2 class="main-subject">Physics</h2>
