--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
   <h2 class="main-subject">Math</h2>
   <h3>Notes</h3>
   <ol>
-    <li>
-      <a href="sample.pdf" target="_blank">sample</a>
+    <li data-date="2025-09-07">
+      <a href="graph theory part 1.pdf" target="_blank">graph theory part 1 by sk sir</a>
     </li>
   </ol>
   <hr />
@@ -70,6 +70,11 @@
 
   <h2 class="main-subject">Chemistry</h2>
   <h3 class="subsubject">Notes</h3>
+  <ol>
+    <li data-date="2025-09-08">
+      <a href="gaseous state part 1.pdf" target="_blank">गैसीय अवस्था part 1 by chandrakanta verma</a>
+    </li>
+  </ol>
 
   <div class="notice">Notice Board 📣</div>
   <ul>
@@ -78,6 +83,54 @@
     <li><a href="https://chat.whatsapp.com/C4MTvqPzpGQ4nUO1rKQoQw?mode=ac_t">Join group for more information</a></li>
   </ul>
 
+  <h2>Ask Your Question</h2>
+  <input type="text" id="nameBox" placeholder="Your name (optional)">
+  <textarea id="commentBox" rows="4" placeholder="Type your question here..."></textarea><br>
+  <button onclick="postComment()">Post</button>
+  <button onclick="clearComments()">Clear All</button>
+
+  <h3>Comments</h3>
+  <div id="comments"></div>
+
+  <script>
+    // Load saved comments on page load
+    window.onload = function() {
+      let saved = localStorage.getItem("comments");
+      if (saved) {
+        document.getElementById("comments").innerHTML = saved;
+      }
+    }
+
+    function postComment() {
+      let name = document.getElementById("nameBox").value || "Student";
+      let text = document.getElementById("commentBox").value;
+      if (text.trim() === "") return;
+
+      let now = new Date();
+      let dateStr = now.toLocaleString(); // shows date + time
+
+      let comment = document.createElement("div");
+      comment.className = "comment";
+      comment.innerHTML = "<span class='name'>" + name + ":</span> " + text +
+                          "<div class='date'>Posted on: " + dateStr + "</div>";
+
+      document.getElementById("comments").prepend(comment);
+      document.getElementById("commentBox").value = "";
+
+      // Save comments to localStorage
+      localStorage.setItem("comments", document.getElementById("comments").innerHTML);
+    }
+
+    function clearComments() {
+      if (confirm("Are you sure you want to delete all comments?")) {
+        localStorage.removeItem("comments");
+        document.getElementById("comments").innerHTML = "";
+      }
+    }
+  </script>
+
+</body>
+</html>
   <footer class="footer">
     <div class="footer-content">
       <p><strong>Disclaimer:</strong> The information provided on this website is for general purposes only. While every effort has been made to ensure accuracy, no guarantee is given regarding completeness or reliability of the content. The owner will not be liable for any loss or damage arising from the use of this website. External links, if any, are provided for convenience and do not signify endorsement.</p>
@@ -137,6 +190,22 @@
       });
     });
   </script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Comment Box</title>
+  <style>
+    body { font-family: Arial, sans-serif; padding: 20px; }
+    #commentBox, #nameBox { width: 100%; padding: 8px; margin-bottom: 8px; }
+    button { padding: 8px 12px; }
+    .comment { border: 1px solid #ccc; padding: 8px; margin: 6px 0; border-radius: 5px; }
+    .name { font-weight: bold; }
+    .date { font-size: 0.8em; color: gray; margin-left: 8px; }
+  </style>
+</head>
+<body>
 
 </body>
 </html>
