--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
       border-radius: 3px;
     }
   </style>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-X2BD6SB0W8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-X2BD6SB0W8');
+</script>
 </head>
 <body>
 
