--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <h1 class="heading">BSC TOP</h1>
   </div>
 
-  <img src="rr.png" width="104" height="70" alt="rr college" class="banner" />
+  <iframe src="rr.png" frameborder="0" class="banner" aria-controls="">rr.png</iframe>
 
   <p class="welcome">Welcome to here...</p>
   <h4>Hello friend you will get all materials related to RR COLLEGE ALWAR</h4>
@@ -91,7 +91,10 @@
     <li>अन्य विषयों के नोट्स जल्द ही उपलब्ध हो जाएंगे</li>
     <li><a href="https://chat.whatsapp.com/C4MTvqPzpGQ4nUO1rKQoQw?mode=ac_t">Join group for more information</a></li>
   </ul>
-
+<h2>
+  <a href="">e-content</a>
+</h2>
+<h3>Here you can access YouTube lectures of famous faculties</h3>
   <h2>Ask Your Question</h2>
   <input type="text" id="nameBox" placeholder="Your name (optional)">
   <textarea id="commentBox" rows="4" placeholder="Type your question here..."></textarea><br>
