--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <li><a href="https://chat.whatsapp.com/C4MTvqPzpGQ4nUO1rKQoQw?mode=ac_t">Join group for more information</a></li>
   </ul>
 <h2>
-  <a href="">e-content</a>
+  <a href="e-content.html">e-content</a>
 </h2>
 <h3>Here you can access YouTube lectures of famous faculties</h3>
   <h2>Ask Your Question</h2>
