--- a/e-content.html
+++ b/e-content.html
@@ -10,7 +10,14 @@
   
 </header>
 <body>
- <iframe src="https://youtu.be/JzhDvU3oimc?si=tsOeVkw-r3kw7jMp" frameborder="50">video</iframe>
+ <div style="position:relative; padding-bottom:56.25%; height:0; overflow:hidden; max-width:100%;">
+  <iframe src="https://www.youtube.com/embed/d7DGIJLdBAw" 
+    style="position:absolute; top:0; left:0; width:100%; height:100%;" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+    allowfullscreen title="Physics">
+  </iframe>
+</div>
 </body>
 
 </html>
