--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="navbar" id="myNavbar">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
-    <a href="#">Services</a>
+    <a href="material.html">Notes Table</a>
     <a href="https://chat.whatsapp.com/C4MTvqPzpGQ4nUO1rKQoQw?mode=ac_t">Contact</a>
     <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">☰</a>
   </div>
