--- a/index.html
+++ b/index.html
@@ -29,21 +29,24 @@
     
     gtag('config', 'G-X2BD6SB0W8');
   </script>
+  <style>
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+</style>
 </head>
 
 <body>
-  
   <div class="navbar" id="myNavbar">
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="material.html">Notes Table</a>
-    <a href="https://chat.whatsapp.com/C4MTvqPzpGQ4nUO1rKQoQw?mode=ac_t">Contact</a>
+    <a href="Admin login.html">Admin login</a>
     <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">☰</a>
   </div>
   
-  <div>
-    <img src="logo.png" alt="logo" class="logo" />
-    <h1 class="heading">BSC TOP</h1>
+<div class="logo-container">
+    <img src="logo.png" alt="Logo">
+    <span>BSC TOP</span>
+  
   </div>
   
   <iframe src="rr.png" frameborder="0" class="banner" aria-controls="">rr.png</iframe>
@@ -55,41 +58,11 @@
  <a href="material.html">👉click here for notes table</a>
  <h2>Notes in the format of table for your ease of access</h2>
  <hr />
-  <h2 class="main-subject">Math</h2>
-  <h3>Notes</h3>
-  <ol>
-    <li data-date="2025-09-07">
-      <a href="graph theory part 1.pdf" target="_blank">graph theory part 1 by sk sir</a>
-    </li>
-  </ol>
-  <hr />
-  
-  <h2 class="main-subject">Physics</h2>
-  <h3 class="sub">Notes</h3>
-  
-  <ol>
-    <li>
-      <a href="https://drive.google.com/file/d/1gHTmbg_GQHXAK-igfzg7a1DUqamg_piM/view?usp=drivesdk">
-        दोलन और तरंगे part 1 By Rishi sir
-      </a>
-    </li>
-    <li data-date="2025-09-01" data-id="phy2">
-      <a href="https://drive.google.com/file/d/1hxzzM0VoOySi8w5bF2k79qVviVF8TxDD/view?usp=drivesdk">
-        दोलन और तरंगे part 2 By Rishi sir
-      </a>
-    </li>
-  </ol>
-  
-  <h3 class="subsubject">Practical file</h3>
-  <hr />
-  
-  <h2 class="main-subject">Chemistry</h2>
-  <h3 class="subsubject">Notes</h3>
-  <ol>
-    <li data-date="2025-09-08">
-      <a href="gaseous state part 1.pdf" target="_blank">गैसीय अवस्था part 1 by chandrakanta verma</a>
-    </li>
-  </ol>
+
+  <div>
+    <a href="sumbit notes.html">sumbit notes</a>
+    यहां आप notes upload कर सकते हैं जिससे आप भी अपना योगदान दे सकते है 
+  </div>
   <h1 class="econtent">
     <a href="e-content.html">👉e-content</a>
   </h1>
