--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 20px;
+      padding: 0px;
+      margin: 0px;
     }
     
     #commentBox,
