--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
   
   <h3>Here you can access YouTube lectures of famous faculties</h3>
   <h2>Ask Your Question</h2>
-  <input type="text" id="nameBox" placeholder="Your name (optional)">
+  <input type="text" id="nameBox" placeholder="Your name (optional)"/>
+  
   <textarea id="commentBox" rows="4" placeholder="Type your question here..."></textarea><br>
   <button onclick="postComment()">Post</button>
   <button onclick="clearComments()">Clear All</button>
@@ -199,7 +200,7 @@
     
     #commentBox,
     #nameBox {
-      width: 100%;
+      width: 329px;
       padding: 8px;
       margin-bottom: 8px;
     }
