--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
     <a href="comments.html">Comment & Doubt Section</a>
     <a href="notice.html">Notice Section</a>
     <a href="submit.html">sumbit notes</a>
+    <a href="bookcorner.html">Book Corner</a>
   </section>
 
   <!-- Footer -->
