--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Website</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
     }
     header {
-      background: #333;
+      background: #101765C2;
       color: whitesmoke;
       display: flex;
       justify-content: space-between;
@@ -124,18 +125,19 @@
     /* Sections */
     .sections {
       padding: 20px;
+      background-color: #05060CC2;
     }
     .sections a {
       display: block;
       margin: 8px 0;
-      color: blue;
+      color: yellow;
       text-decoration: none;
       font-weight: 500;
     }
 
     /* Footer */
     footer {
-      background: #222;
+      background: #121B74C2;
       color: #ddd;
       padding: 20px;
       text-align: center;
@@ -150,6 +152,9 @@
     footer a.admin {
       color: red;
       font-weight: bold;
+    }
+    i{
+     margin-right: 0px;
     }
 
     /* Responsive */
@@ -213,6 +218,7 @@
     <a href="group.html">Join Group</a>
     <a href="submit.html">Submit Notes</a>
     <a href="Admin login.html" class="admin">Admin Login</a>
+    <a href="bookcorner.html">Book Corner</a>
   </div>
 
   <!-- Nav -->
@@ -253,7 +259,8 @@
       <a href="work.html">Work With Us</a>
       <a href="group.html">Join Group</a>
       <a href="submit.html">Submit notes</a>
-      <a href="Admin login.html" class="admin">Admin Login</a>
+      
+      <a href="Admin login.html" class="admin" ><i class="fas fa-id-card-alt">Admin login</i></a>
     </div>
   </footer>
 
