--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
       font-family: Arial, sans-serif;
     }
     header {
-      background: #101765C2;
+   background: linear-gradient( to right bottom,red, blue,green);
       color: whitesmoke;
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 10px 20px;
-    }
+    } 
     header .menu {
       cursor: pointer;
       font-size: 22px;
     }
     header .logo {
       font-weight: bold;
+      
+      
     }
     nav {
       background: #f2f2f2;
@@ -137,8 +139,8 @@
 
     /* Footer */
     footer {
-      background: #121B74C2;
-      color: #ddd;
+    background: linear-gradient( to right bottom,red, blue, green);
+  color: #ddd;
       padding: 20px;
       text-align: center;
     }
@@ -228,7 +230,7 @@
 
   <!-- Gallery with Slider -->
   <section class="gallery">
-    <h2>PHOTO</h2>
+    <h2 class="photo">PHOTO</h2>
     <div class="slider">
       <div class="slides">
         <img src="rr.png" alt="Slide 1">
