--- a/material.html
+++ b/material.html
@@ -68,6 +68,14 @@
           <td>Chandrakanta Verma</td>
           <td></td>
           <td></td>
+          
+        </tr>
+        <tr>
+          <td>Chemistry</td>
+          <td><a href="https://drive.google.com/file/d/1n2U-wUWvX8Tm7AxiggMIKBKZ_sFZ0Cje/view?usp=drivesdk">आभासी बल एवं घूर्णी निर्देश तंत्र</a></td>
+          <td>Seema madam</td>
+          <td>Admin</td>
+          <td></td>
         </tr>
       </tbody>
     </table>
