--- a/material.html
+++ b/material.html
@@ -75,7 +75,7 @@
           <td><a href="https://drive.google.com/file/d/1n2U-wUWvX8Tm7AxiggMIKBKZ_sFZ0Cje/view?usp=drivesdk">आभासी बल एवं घूर्णी निर्देश तंत्र part 1</a></td>
           <td>Seema madam</td>
           <td>Admin</td>
-          <td></td>
+          <td>upload date (15/09/2025)</td>
         </tr>
       </tbody>
     </table>
