--- a/material.html
+++ b/material.html
@@ -76,6 +76,15 @@
           <td>Seema madam</td>
           <td>Admin</td>
           <td>upload date (15/09/2025)</td>
+          
+        </tr>
+        <tr>
+          <td>Math</td>
+          <td><a href="https://drive.google.com/file/d/1nYSbGGMCiCk5kv9HCjuVXYgotJT_F-xD/view?usp=drivesdk">Graph theory part 2</a></td>
+          <td>SK sir</td>
+          <td>Admin</td>
+          <td>upload date (15/09/2025)</td>
+          
         </tr>
       </tbody>
     </table>
