--- a/pyp.html
+++ b/pyp.html
@@ -37,30 +37,30 @@
         
         <tr>
           <td class="math">Math</td>
-          <td><a href="" target="_blank">Math semester 1 2024</a></td>
+          <td><a href="https://drive.google.com/file/d/1pn9Rh5QsTNtCH9iinVEg9Knyl5z9f6oa/view?usp=drivesdk">Math semester 1 2024</a></td>
   
         </tr>
 
         <tr>
           <td class="physics">Physics</td>
-          <td><a href="">Physics semester 1 2024</a></td>
+          <td><a href="https://drive.google.com/file/d/1q60l-0XIU3UERon5ZlnnmXqKvtzMZGXm/view?usp=drivesdk">Physics semester 1 2024</a></td>
         </tr> 
         <tr>
           <td class="chemistry">Chemistry</td>
-          <td><a href="">Chemistry semester 1 2024</a></td>
+          <td><a href="https://drive.google.com/file/d/1pXTjJBdddefp-g_mxnMQr3Mejmz0PFAq/view?usp=drivesdk">Chemistry semester 1 2024</a></td>
         </tr>
   <tr>
     <td class="physics">English </td>
     
-    <td><a href="#">English semester 1 2024</a></td>
+    <td><a href="https://drive.google.com/file/d/1ptDns-1AaUKPLiCNhK4Fr_wioTkoydrE/view?usp=drivesdk">English semester 1 2024</a></td>
   </tr>
     <tr>
-    <td class="math">Environment</td>
-    <td><a href="#">Env</a></td>
+    <td class="math">Environmental studies</td>
+    <td><a href="https://drive.google.com/file/d/1pzUUKycCsYtjU7WSqV0q4mvvBwdluIxx/view?usp=drivesdk">Env. studies semester 1 2024</a></td>
   </tr>
     <tr>
     <td class="chemistry">Computer</td>
-    <td><a href="#">Computer semester 1 2024</a></td>
+    <td><a href="https://drive.google.com/file/d/1pp8QWwo0eexLw7MLc7rmmz91bepDds8h/view?usp=drivesdk">Computer semester 1 2024</a></td>
   </tr>
   
 
