--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Sachin Nitharwal | All Rights Reserved</p>
+    <p>© 2025 Sachin Nitharwal and Sanjay Saini | All Rights Reserved</p>
     <div>
       <a href="about.html">About Us</a>
       <a href="work.html">Work With Us</a>
