--- a/pyp.html
+++ b/pyp.html
@@ -62,7 +62,7 @@
     <td class="chemistry">Computer</td>
     <td><a href="https://drive.google.com/file/d/1pp8QWwo0eexLw7MLc7rmmz91bepDds8h/view?usp=drivesdk">Computer semester 1 2024</a></td>
   </tr>
-  
+  <h1 class="thanks">Special thanks to Ram Naresh Meena 🙏</h1>
 
 </body>
 
