--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
         padding: 6px;
       }
     }
+    .bottom{
+      font-weight: bolder;
+    }
   </style>
 </head>
 <body>
@@ -258,8 +261,8 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Sachin Nitharwal and Sanjay Saini | All Rights Reserved</p>
-    <div>
+    <p>© 2025 Sachin Nitharwal and Sanjay Saini | All Rights Reserved |An Independent Educational Resource Platform with no official university affiliation.</p>
+    <div class="bottom">
       <a href="about.html">About Us</a>
       <a href="work.html">Work With Us</a>
       <a href="group.html">Join Group</a>
