--- a/index.html
+++ b/index.html
@@ -204,6 +204,18 @@
       font-weight: bolder;
     }
   </style>
+ 
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y3BQMVZ3FJ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-Y3BQMVZ3FJ');
+  </script>
+
 </head>
 <body>
 
