--- a/bookcorner.html
+++ b/bookcorner.html
@@ -22,7 +22,7 @@
 
   <div class="container">
     <h3>Book Corner एक ऐसा platform हैं जहां पर आप कोई भी  second hand book buy और sell कर सकते हैं</h3>
-    <a href="https://form.svhrt.com/68c82440b612ad317e18c66a" class="btn">Buy Book </a>
+    <a href="sorry.html" class="btn">Buy Book </a>
     <a href="sell.html" class="btn">Sell Book</a>
   </div>
 </body>
