--- a/sorry.html
+++ b/sorry.html
@@ -7,8 +7,8 @@
   <title>sorry</title>
   <style>
     h1{
-      color: red;
-      background-color: #08090FA6;
+      color: #D0D3E1;
+      background-color: #000000C4;
       border-radius: 10px;
       padding: 5px;
       
