--- a/index.html
+++ b/index.html
@@ -418,6 +418,27 @@
     <a href="bookcorner.html">Book Corner</a>
   </section>
   
+  <!-- Amazon Affiliate Product Grid -->
+<div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;padding:10px;font-family:sans-serif;">
+
+  <!-- Product Card 1 -->
+  <div style="border:1px solid #ddd;border-radius:10px;overflow:hidden;box-shadow:0 4px 8px rgba(0,0,0,0.1);">
+    <a href="https://www.amazon.in/GETSABLE-Waterproof-Silicone-Compatible-Samsung/dp/B0FMYPDHKS?pd_rd_w=Xi9yn&content-id=amzn1.sym.2fa5ef78-d215-4b54-bdb7-fa3d3620b822&pf_rd_p=2fa5ef78-d215-4b54-bdb7-fa3d3620b822&pf_rd_r=8E0CTAFTC3YCZAKYDGE6&pd_rd_wg=2APhy&pd_rd_r=600b2b8b-18ad-4365-bfb0-848c8a2089d5&pd_rd_i=B0FMYPDHKS&th=1&linkCode=ll1&tag=sachin0550-21&linkId=2b8ad6e8349d7847cb5ff5882fc4b43e&language=en_IN&ref_=as_li_ss_tl" target="_blank" rel="nofollow">
+      <img src="IMG_20250930_134832_178.jpg" alt="Smartwatch" style="width:100%;height:auto;display:block;">
+    </a>
+    <div style="padding:15px;text-align:center;">
+      <h3 style="font-size:16px;margin:0 0 10px;">Latest Smartwatch</h3>
+      <p style="color:green;font-weight:bold;margin:0 0 10px;">₹629</p>
+      <a href="https://www.amazon.in/GETSABLE-Waterproof-Silicone-Compatible-Samsung/dp/B0FMYPDHKS?pd_rd_w=Xi9yn&content-id=amzn1.sym.2fa5ef78-d215-4b54-bdb7-fa3d3620b822&pf_rd_p=2fa5ef78-d215-4b54-bdb7-fa3d3620b822&pf_rd_r=8E0CTAFTC3YCZAKYDGE6&pd_rd_wg=2APhy&pd_rd_r=600b2b8b-18ad-4365-bfb0-848c8a2089d5&pd_rd_i=B0FMYPDHKS&th=1&linkCode=ll1&tag=sachin0550-21&linkId=2b8ad6e8349d7847cb5ff5882fc4b43e&language=en_IN&ref_=as_li_ss_tl" target="_blank" rel="nofollow"
+         style="display:inline-block;padding:10px 15px;background:#ff9900;color:white;text-decoration:none;border-radius:5px;font-weight:bold;">
+        Buy on Amazon
+      </a>
+    </div>
+  </div>
+
+  
+</div>
+  
   <!-- Team card -->
   <h1 class="ourteam">OUR TEAM</h1>
   <div class="teamcard">
