--- a/index.html
+++ b/index.html
@@ -609,7 +609,10 @@
     
     <!-- Footer -->
     <footer>
-      <p>© 2025 Sachin Nitharwal and Sanjay Saini | All Rights Reserved |An Independent Educational Resource Platform with no official university affiliation.</p>
+      <p>© 2025 Sachin Nitharwal  | All Rights Reserved |An Independent Educational Resource Platform with no official university affiliation|
+        <h2>Contact Us</h2>
+  <p>Email: <a href="mailto:bsctop.group@gmail.com">dream100wala@gmail.com</a><br>
+  Address: RR College, Alwar, Rajasthan, India</p></p>
       <div class="bottom">
         <a href="about.html">About Us</a>
         <a href="terms.html">terms & conditions</a>
