--- a/privacy.html
+++ b/privacy.html
@@ -40,7 +40,7 @@
   <p>You can request deletion of your personal data by contacting us. Students can opt out of updates/notifications at any time.</p>
 
   <h2>Contact Us</h2>
-  <p>Email: <a href="mailto:bsctop.group@gmail.com">bsctop.group@gmail.com</a><br>
+  <p>Email: <a href="mailto:bsctop.group@gmail.com">dream100wala@gmail.com</a><br>
   Address: RR College, Alwar, Rajasthan, India</p>
 
   <footer>
