--- a/index.html
+++ b/index.html
@@ -579,11 +579,11 @@
   
   <div class="socialcontainer">
     <div class="container">
-      <img src="qrcode.png" class="id" alt="profile photo">
+      <img src="wqr.png" class="id" alt="profile photo">
       </img>
       <div>
         <h3 class="name">Scan me</h3>
-        <h4 class="bio"> Website</h4>
+        <h4 class="bio"> WhatsApp Group</h4>
       </div>
     </div>
     <!--
