--- a/material.html
+++ b/material.html
@@ -97,6 +97,15 @@
           <td>upload date (15/09/2025)</td>
           
         </tr>
+                <tr>
+          <td class="math">Math</td>
+          <td><a href="https://drive.google.com/file/d/1-DB_6vS2aLJATXXWUd2e8LWE1rDMvVkt/view?usp=drivesdk" target="_blank">Relations (संबंध)</a>
+                        <p class="newbadge">NEW</p>
+          </td>
+          <td>Durga Meena</td>
+          <td>Shailendra Jangid</td>
+          <td>Upload date(8/10/2025)</td>
+        </tr>
         
         <tr>
           <td class="physics">Physics</td>
