--- a/material.html
+++ b/material.html
@@ -118,6 +118,15 @@
           <td>Upload date(8/10/2025)</td>
         </tr>
         
+                <tr class="math">
+          <td>Math</td>
+          <td><a href="https://drive.google.com/file/d/1-yRYsergmPKzJv9V1ThawvkTPDN-BdPC/view?usp=drivesdk" target="_blank">साध्य कलन</a>
+            <p class="newbadge">NEW</p>
+          </td>
+          <td>Durga Meena</td>
+          <td>Shailendra Jangid</td>
+          <td>Upload date(8/10/2025)</td>
+        </tr>
         
         <tr class="physics">
           <td>Physics</td>
