--- a/index.html
+++ b/index.html
@@ -448,9 +448,11 @@
     <div class="popup-content">
       <span id="closePopup" class="close">&times;</span>
       <h2>Special Offer!</h2>
-      <a href="https://www.amazon.in/GETSABLE-Waterproof-Silicone-Compatible-Samsung/dp/B0FMYPDHKS?pd_rd_w=Xi9yn&content-id=amzn1.sym.2fa5ef78-d215-4b54-bdb7-fa3d3620b822&pf_rd_p=2fa5ef78-d215-4b54-bdb7-fa3d3620b822&pf_rd_r=8E0CTAFTC3YCZAKYDGE6&pd_rd_wg=2APhy&pd_rd_r=600b2b8b-18ad-4365-bfb0-848c8a2089d5&pd_rd_i=B0FMYPDHKS&th=1&linkCode=ll1&tag=sachin0550-21&linkId=2b8ad6e8349d7847cb5ff5882fc4b43e&language=en_IN&ref_=as_li_ss_tl" target="_blank">
-        <img src="IMG_20250930_134832_178.jpg" alt="Amazon Product" width="250">
+      <a href="https://amzn.to/4o96Lhu" target="_blank">
+        <img src="https://m.media-amazon.com/images/I/51dctBN77rL._SL1500_.jpg" alt="Amazon Product" width="250">
       </a>
+              <p style="color:red;font-weight:bold;margin:0 0 10px; font-size: 30px;">₹
+        101</p>
       <p>Click the image to buy this product on Amazon</p>
     </div>
   </div>
