--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
       </div>
     </div>
     <div class="container">
-      <img src="young-man-avatar-cartoon-character-profile-picture-vector-25739612.jpg" class="id" alt="profile photo">
+      <img src="sanjay saini.jpg" class="id" alt="profile photo">
       </img>
       <div>
         <h3 class="name">SANJAY SAINI</h3>
