--- a/index.html
+++ b/index.html
@@ -600,6 +600,15 @@
         <h4 class="bio">Material Manager</h4>
       </div>
     </div>
+    
+    <div class="container">
+      <img src="sanju singh.jpg" class="id" alt="profile photo">
+      </img>
+      <div>
+        <h3 class="name">Sanju Singh</h3>
+        <h4 class="bio">Material Manager</h4>
+      </div>
+    </div>
   </div>
   
   
