--- a/index.html
+++ b/index.html
@@ -624,16 +624,16 @@
         <h4 class="bio"> WhatsApp Group</h4>
       </div>
     </div>
-    <!--
+
     <div class="container">
-      <img src="qrcode.png" class="id" alt="profile photo">
+      <img src="BSC TOP .png" class="id" alt="profile photo">
       </img>
       <div>
         <h3 class="name">Scan me</h3>
         <h4 class="bio"> Website</h4>
       </div>
     </div>
-    
+        <!--
     <div class="container">
       <img src="qrcode.png" class="id" alt="profile photo">
       </img>
