--- a/pyp.html
+++ b/pyp.html
@@ -5,6 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Previous year papers</title>
+  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L5T047QX77"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L5T047QX77');
+</script>
+  
   <style>
  .table-container { width: 100%; overflow-x: auto; max-height: 80vh; }
     table { width: 100%; border-collapse: collapse; min-width: 600px; }
